client/src/App.css
:root {
    --main-bk-color: rgb(35, 38, 46);
    --main-bk-color-half: rgba(35, 38, 46, .5);
    --main-color: rgb(230,230,230);

    --deeper-bk-color: rgb(10, 9, 22);
    --deeper-bk-color-half: rgba(10, 9, 22, .75);

    --padding: 15px;
}
::-webkit-scrollbar {
    width: 4px;
    z-index: 15;
}

::-webkit-scrollbar-track {
    
    background: inherit;
}

::-webkit-scrollbar-thumb {
    z-index: 15;
    background: var(--main-color);
}

/* Animations */
/* @keyframes activate-tab {
    from{
        background: var(--main-bk-color);
        padding: 10px 10px 0 10px;
    }
    to {
        background: var(--deeper-bk-color);
        padding: 10px;
    }
} */

/* @keyframes switchPage {
    from {
        height: 0%;
        border-bottom: var(--main-color) solid 2px;
    }

    to {
        height: 100%;
        border-bottom: rgba(0,0,0,0) solid 2px;
    }
} */

/* 
.light {
    --main-bk-color: rgb(230,230,230);
    --main-color: rgb(30, 30, 30);
}

.dark {
    --main-bk-color: rgb(45,45,45);
    --main-color: rgb(230,230,230);
} */

body {
    font-family: sans-serif;
    line-height: 1.5em;
}


#content {
    background: var(--main-bk-color);
    color: var(--main-color);
    -ms-box-orient: horizontal;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -moz-flex;
    display: -webkit-flex;
    display: flex;
    flex-direction: column;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    overflow-y: auto;
}

